--- a/Web/Pages/CCGMember/CurrentLevel.cshtml
+++ b/Web/Pages/CCGMember/CurrentLevel.cshtml
@@ -12,7 +12,7 @@
     </h2>
     <div class="row">
         <ol class="breadcrumb">
-            <li><a asp-page="../Homepage">@Localizer["Home"]</a></li>
+            <li><a asp-page="../Index">@Localizer["Home"]</a></li>
             <li><a asp-page="AllPositions">@Localizer["Categories"]</a></li>
             <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Select"]</a></li>
         </ol>
