--- a/Web/Pages/Candidate/Shoreside/SimilarDetails.cshtml
+++ b/Web/Pages/Candidate/Shoreside/SimilarDetails.cshtml
@@ -37,7 +37,7 @@
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
+                <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
                 @if (Model.PreviousPage.Contains("Student"))
                 {
                     <li><a asp-page="../../Student/Index">@Localizer["Student"]</a></li>
@@ -225,7 +225,7 @@ else if (!(Model.PageSubmit == "true"))
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
+                <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
                 @if (Model.PreviousPage.Contains("Student"))
                 {
                     <li><a asp-page="../../Student/Index">@Localizer["Student"]</a></li>
