--- a/Web/Pages/Overview.cshtml
+++ b/Web/Pages/Overview.cshtml
@@ -11,6 +11,7 @@
     </h2>
     <div class="row">
         <ol class="breadcrumb">
+            <li><a asp-page="Index">@Localizer["Home"]</a></li>
             <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Intro"]</a></li>
         </ol>
     </div>
