--- a/Web/Pages/Student/HighSchool/Shoreside/Computer.cshtml
+++ b/Web/Pages/Student/HighSchool/Shoreside/Computer.cshtml
@@ -15,7 +15,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a asp-page="../../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../../../Index">@Localizer["Home"]</a></li>
                     <li><a asp-page="../../Index">@Localizer["Student"]</a></li>
                     <li><a asp-page="../Index">@Localizer["High School"]</a></li>
                     <li><a asp-page="Index">@Localizer["Shoreside"]</a></li>
