--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -72,7 +72,7 @@
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
+                <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
                 @if (Model.PreviousPage.Contains("Student"))
                 {
                     <li><a asp-page="../../Student/Index">@Localizer["Student"]</a></li>
@@ -399,7 +399,7 @@
         <div class="row col-lg-12">
             <h3>@Localizer["MATCHING CERTIFICATES"]</h3>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-12">
             <table class="table table-responsive table-bordered">
                 <thead>
                     <tr>
