--- a/Web/Pages/Candidate/Seagoing/Crew/Logistics/PositionList.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Logistics/PositionList.cshtml
@@ -13,7 +13,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a asp-page="../../../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../../../../Index">@Localizer["Home"]</a></li>
                     <li><a asp-page="../../../Index">@Localizer["Candidate"]</a></li>
                     <li><a asp-page="../../Index">@Localizer["Seagoing"]</a></li>
                     <li><a asp-page="../Index">@Localizer["Crew"]</a></li>
