--- a/Web/Pages/Candidate/Shoreside/SimilarList.cshtml
+++ b/Web/Pages/Candidate/Shoreside/SimilarList.cshtml
@@ -13,7 +13,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
                     <li><a asp-page="../Index">@Localizer["Candidate"]</a></li>
                     <li><a asp-page="AllCandidateShoreside">@Localizer["Shoreside"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Position List"]</a></li>
