--- a/Web/Pages/Student/University/Shoreside/Business.cshtml
+++ b/Web/Pages/Student/University/Shoreside/Business.cshtml
@@ -12,7 +12,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a href="../../../Index">@Localizer["Home"]</a></li>
                     <li><a href="../../Index">@Localizer["Student"]</a></li>
                     <li><a href="../Index">@Localizer["University"]</a></li>
                     <li><a href="Index">@Localizer["Shoreside"]</a></li>
