--- a/Web/Pages/Student/University/Shoreside/Index.cshtml
+++ b/Web/Pages/Student/University/Shoreside/Index.cshtml
@@ -12,7 +12,7 @@
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a href="../../../Homepage">@Localizer["Home"]</a></li>
+                <li><a href="../../../Index">@Localizer["Home"]</a></li>
                 <li><a href="../../Index">@Localizer["Student"]</a></li>
                 <li><a href="../Index">@Localizer["University"]</a></li>
                 <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Shoreside"]</a></li>
