--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -397,7 +397,7 @@
     @if (Model.MatchingCertificates.Any(e => e.Active != 0))
     {
         <div class="row col-lg-12">
-            <h3>@Localizer["MATCHING CERTIFICATES"]</h3>
+            <h3>@Localizer["MATCHING CERTIFICATIONS"]</h3>
         </div>
         <div class="col-md-12">
             <table class="table table-responsive table-bordered">
